<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    tools:context="com.example.stamatis.questiongameapp.GameActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/header2_style"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/text_player_name"
                android:text="@string/example_name_header" />
            <TextView
                style="@style/header2_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/text_player_score"
                android:text="@string/example_score" />

            <TextView
                android:id="@+id/text_pts"
                style="@style/header2_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/string_points"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/text_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_hp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progress="60"
                android:id="@+id/health_bar"
                android:progressDrawable="@drawable/custom_progress_bar"
                android:minHeight="40dp"
                android:layout_weight="4" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_percentage"
                android:layout_weight="1"
                android:textSize="@dimen/header2_size"
                android:textAlignment="center"
                android:id="@+id/text_health_percentage"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_question"
            android:layout_marginTop="26sp"
            android:textSize="@dimen/header2_size"/>
        <TextView
            style="@style/paragraph_style"
            android:id="@+id/text_question"
            android:text="@string/example_paragraph" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdio_group">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_choice_A"
                    android:id="@+id/rdBtn_A"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_choice_B"
                    android:id="@+id/rdBtn_B"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_choice_C"
                    android:id="@+id/rdBtn_C"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_choice_D"
                    android:id="@+id/rdBtn_D"/>
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/bottom_button_style"
                android:text="@string/string_submit"
                android:onClick="submitClick"
                android:id="@+id/btn_submit"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

